# robotdb

./: CLAUDE.md  Cargo.toml  README.md
.github/workflows/: release.yml
benches/: benchmarks.rs
examples/: bench_insert.rs
src/: error.rs  lib.rs
src/btree/: integrity.rs  mod.rs  node.rs  tree.rs
src/catalog/: mod.rs  schema.rs  value.rs
src/executor/: engine.rs  eval.rs  mod.rs
src/sql/: ast.rs  lexer.rs  mod.rs  parser.rs
src/storage/: buffer.rs  disk.rs  fault.rs  mod.rs  page.rs
src/transaction/: manager.rs  mod.rs  wal.rs
tests/: btree_integrity_test.rs  concurrency_test.rs  differential_test.rs  fault_injection_test.rs  fuzz_test.rs  property_test.proptest-regressions  property_test.rs  sql_test.rs
tests/differential/: mod.rs
